oc_manifests/deploymentConfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: observai-backend
  namespace: testing-workspace
spec:
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - observai-backend
        from:
          kind: ImageStreamTag
          namespace: testing-workspace
          name: 'observai-backend:latest'
  replicas: 1
  selector:
      app: observai-backend
  template:
    metadata:
      labels:
        app: observai-backend
    spec:
      containers:
        - name: observai-backend
          image: >-
            image-registry.openshift-image-registry.svc:5000/testing-workspace/observai-backend
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
